--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,7 @@
 
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
+		<p>{%include icon-technology.html%}
       </div>
     </div>
 
