--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
 
       <div class="footer-col footer-col-2">
         <nav class="social-media-list">
+		<p>УжНУ в соцмережах</p>
           {% include icons.html %}
         </nav>
       </div>
