--- a/_includes/icon-technology.html
+++ b/_includes/icon-technology.html
@@ -4,4 +4,5 @@
 <span class="username">{{site.github_username}}</span></a> 
 <i> а також  </i>
 <a href="{{ site.jekyll_link}}" target="blank"><span>{%include icon-jekyll.svg%}</span>
-<span class="username">{{ site.jekyll_username }}</span></a>{% endif %}
+<span class="username">{{ site.jekyll_username }}</span></a>
+{% endif %}
