--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,3 +1,3 @@
-{% if site.you-tube_link %}<a href="{{ site.you-tube_link }}" target="_blank"><span class="icon icon--you-tube">{% include icon-you-tube.svg %}</span><span class="username">{{site.you-tube_username}}</span></a> {% endif %}
-{% if site.facebook_link %}<a href="{{ site.facebook_link }}" target="_blank"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span><span class="username">{{site.facebook_username}}</span></a> {% endif %}
-{% if site.vk_link %}<a href="{{ site.vk_link }}" target="_blank"><span class="icon icon--vk">{% include icon-vk.svg %}</span><span class="username">{{site.vk_username}}</span></a> {% endif %}
+{% if site.you-tube_link %}<a href="{{ site.you-tube_link }}" target="_blank"><span class="icon icon--you-tube">{% include icon-you-tube.svg %}</span></a> {% endif %}
+{% if site.facebook_link %}<a href="{{ site.facebook_link }}" target="_blank"><span class="icon icon--facebook">{% include icon-facebook.svg %}</span></a> {% endif %}
+{% if site.vk_link %}<a href="{{ site.vk_link }}" target="_blank"><span class="icon icon--vk">{% include icon-vk.svg %}</span></a> {% endif %}
