--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,6 +198,8 @@ pre {
         width: 24px;
         height: 24px;
         vertical-align: middle;
+		margin-left: 10px;
+		padding: 2px;
 		        
 		path {
             //fill: $grey-color;
